--- a/application/clients/desktopV2/src/app/signup/signup.component.scss
+++ b/application/clients/desktopV2/src/app/signup/signup.component.scss
@@ -67,12 +67,18 @@ img {
 }
 
 #email_input {
-    // margin-left: 10%;
     background-color: #F5F5F5;
 }
 
 #password_input {
-    //margin-left: 10%;
+    background-color: #F5F5F5;
+}
+
+#fname_input {
+    background-color: #F5F5F5;
+}
+
+#lname_input {
     background-color: #F5F5F5;
 }
 
