--- a/application/clients/desktopV2/src/app/footer/footer.component.scss
+++ b/application/clients/desktopV2/src/app/footer/footer.component.scss
@@ -14,6 +14,16 @@
     padding: 50px 0
 }
 
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    // background-color: red;
+    // color: white;
+    // text-align: center;
+}
+
 .gpd-container {
     width: 90%;
     padding: 25px 0;
