--- a/application/clients/desktopV2/src/app/homepage/homepage.component.html
+++ b/application/clients/desktopV2/src/app/homepage/homepage.component.html
@@ -7,7 +7,7 @@
                         <div class="row">
                             <div class="col-lg-11">
                                 <div class="card card-body bg-light" id="card_style">
-                                    <img id="card_logo" src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/83f15bb5f2974eeabd3874cc5eec66f9_new_logo_gep.png" />
+                                    <img id="card_logo" src="./assets/images/header/logo.png" />
                                     <h1 id="heading_tag">{{'HOME.HEADING1' | translate}} ​​​​​​​{{'HOME.HEADING2' | translate}}</h1>
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="signup_btn">
@@ -25,7 +25,7 @@
             </div>
             <div id="imysg" class="cell gpd-clm">
                 <div id="ia17i" class="gdp-row gpd-grid">
-                    <div id="i4b93" class="cell gpd-clm"><img id="ihygk" src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/54d06e4405374d05ae388649457aba65_image_8.png" />
+                    <div id="i4b93" class="cell gpd-clm"><img id="ihygk" src="./assets/images/homepage/banner.png" />
                     </div>
                 </div>
             </div>
