--- a/application/clients/desktopV2/src/app/signup/signup.component.scss
+++ b/application/clients/desktopV2/src/app/signup/signup.component.scss
@@ -43,7 +43,7 @@ img {
 
 #imysg {
     padding: 0 80px 0 80px;
-    background-image: url('https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/f9ead937886d4438bb05aed9e0b41931_group_17238.png');
+    background-image: url('/assets/images/login/banner.png');
     background-repeat: no-repeat;
     background-position: right top;
     background-attachment: scroll;
