--- a/application/clients/desktopV2/src/app/header/header.component.html
+++ b/application/clients/desktopV2/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav id="nav1" class="navbar navbar-expand-lg  navbar-dark ">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img id="header_logo" src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/83f15bb5f2974eeabd3874cc5eec66f9_new_logo_gep.png" alt="logo">
+            <img id="header_logo" src="./assets/images/header/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="cell gpd-clm" id="ijc7k">
                                     <div class="gdp-row gpd-grid" id="ivare">
-                                        <div class="cell gpd-clm" id="it9sw"><img id="i3bzx" (click)="hideAbout()" src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/690f4f7f6683493fba7be8b7c57a91a1_noun_cancel_702589.png" />
+                                        <div class="cell gpd-clm" id="it9sw"><img id="i3bzx" (click)="hideAbout()" src="./assets/images/header/close.png" />
                                         </div>
                                     </div>
                                 </div>
