--- a/application/clients/desktopV2/src/app/project/project.component.html
+++ b/application/clients/desktopV2/src/app/project/project.component.html
@@ -1,3 +1,6 @@
+<ngx-spinner bdColor="rgba(231,220,220,0.33)" size="small" color="#b2acac" [fullScreen]="true">
+    <img class="loading-image" src='./assets/images/loading-animation.gif' />
+</ngx-spinner>
 <div class="container">
     <div class="row">
         <div class="col-md-12 my-4 p-4">
@@ -15,16 +18,27 @@
             <div class="row" id="mat_body">
                 <div class="col-md-3" *ngFor="let proj of myAllProjects; let i = index">
                     <div class="sitecard">
-                        <img src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/559d1b1a2a2e46f2b13cc91778b31740_new1.png" alt="">
+                        <img id="img1" src="./assets/images/project/template1.png" alt="">
+                        <!-- <img  src="{{proj.app_ui_template_img}}" alt=""> -->
+                        <div class="container" style="position: absolute;top:135px">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h2 style="color: wheat;">{{proj.app_ui_template}}</h2>
+                                </div>
+                                <div class="col-lg-12">
+                                    <h4 style="color: white">{{proj.name}}</h4>
+                                </div>
+                            </div>
+                        </div>
                         <div class="d-flex justify-content-around">
                             <div class="p-2 bd-highlight">
-                                <mat-icon class="base-icon">edit</mat-icon>
+                                <mat-icon class="base-icon" id="edit_icon" style="cursor: pointer;"></mat-icon>
                             </div>
                             <div class="p-2 bd-highlight">
-                                <mat-icon class="base-icon">note</mat-icon>
+                                <mat-icon class="base-icon" id="duplicate_icon" (click)="cloneProject(proj)" style="cursor: pointer;"></mat-icon>
                             </div>
                             <div class="p-2 bd-highlight">
-                                <mat-icon class="base-icon">delete</mat-icon>
+                                <mat-icon class="base-icon" style="cursor: pointer;" (click)="openDeleteModel(proj)">delete</mat-icon>
                             </div>
                         </div>
                     </div>
@@ -44,17 +58,39 @@
             </mat-expansion-panel-header>
             <mat-divider class="my-3" id="divider"></mat-divider>
             <div class="row" id="mat_body">
-                <div class="col-md-3" *ngFor="let proj of myAllProjects; let i = index">
+                <div class="col-md-3" *ngFor="let cloneproj of cloneAllProjects; let i = index">
                     <div class="sitecard">
-                        <img src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/8f78dc7e55f348c48c391196335958b5_new2.png" alt="">
+                        <img src="./assets/images/project/template2.png" alt="">
+                        <div class="container" style="position: absolute;top:135px">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h2 style="color: wheat;">{{cloneproj.app_ui_template}}</h2>
+                                </div>
+                                <div class="col-lg-12">
+                                    <h4 style="color: white">{{cloneproj.name}}</h4>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <br>
                 </div>
-                <div class="col-md-4" *ngIf="myAllProjects.length === 0">
+                <div class="col-md-4" *ngIf="cloneAllProjects.length === 0">
                     No Projects Available.
                 </div>
             </div>
         </mat-expansion-panel>
-
+    </div>
+</div>
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top': '100px','display':delmodal}">
+    <div class="modal-dialog modal-sm" role="dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>Please click confirm to delete this project ? </p>
+            </div>
+            <div class="modal-footer" style="padding: 5px">
+                <button type="button" (click)="deleteMyProjects()" class="btn btn-default">Confirm</button>
+                <button type="button" (click)="onCloseHandled()" class="btn btn-default">cancel</button>
+            </div>
+        </div>
     </div>
 </div>
