--- a/application/clients/desktopV2/src/app/signup/signup.component.html
+++ b/application/clients/desktopV2/src/app/signup/signup.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid fill">
         <div id="map" class="row">
             <div class="col-lg-7" id="imysg">
-                <img id="ihygk" src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/7aa5befb081c4c4ab410f00c9823454e_geplblue.png" />
+                <img id="ihygk" src="./assets/images/login/logo.png" />
             </div>
             <div class="col-lg-5 px-5 pt-5" style="margin-top:3%;">
                 <form [formGroup]="registerform">
