--- a/application/clients/desktopV2/src/app/project/project.component.scss
+++ b/application/clients/desktopV2/src/app/project/project.component.scss
@@ -9,15 +9,6 @@
     white-space: nowrap;
 }
 
-.sitecard {
-    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, .1);
-    box-shadow: 0 0 15px rgba(0, 0, 0, .1);
-    background-color: #383b42;
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative;
-}
-
 #ihclgr {
     white-space: nowrap;
     background-color: #5DB18C;
@@ -28,10 +19,49 @@
     float: right;
 }
 
+.btn.btn-primary {
+    background-color: #00789A;
+    border: 0 solid rgb(0, 93, 192);
+    padding: 6px 20px 6px 20px;
+    transition: background-color 0.2s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+#cancel_btn {
+    background-color: #9297A7;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px 20px 10px 20px;
+}
+
+#close_btn {
+    float: right;
+    cursor: pointer;
+}
+
+#template_btn {
+    background-color: #141E4F;
+    color: #ffffff;
+    font-family: Montserrat, sans-serif;
+    padding: 10px 28px 10px 28px;
+    border-radius: 8px 8px 8px 8px;
+    height: 43px;
+}
+
+#create_btn {
+    background-color: #5DB18C;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+    border-radius: 5px 5px 5px 5px;
+    padding: 10px 20px 10px 20px;
+}
+
 ::ng-deep .mat-expansion-indicator::after {
     height: 20px;
     width: 35px;
-    background-image: url(https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/ee20d2208c0541068ab983ac52331f68_noun_sort_3095077.png);
+    background-image: url('/assets/images/project/arrow.png');
     background-size: cover;
     border: none;
     border-width: 0 !important;
@@ -71,8 +101,61 @@
     background-image: url('/assets/images/project/delete_white.svg');
 }
 
-#sitecard_icons {
-    margin-left: 8%;
+.card_image {
+    padding: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
+}
+
+.select_template_image {
+    padding: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+}
+
+.sitecard__overlay {
+    background-color: rgba(0, 0, 0, .75);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: 10;
+    color: #fff;
+    font-size: 1rem;
+    text-align: center;
+    line-height: 150px;
+    opacity: 0;
+    cursor: pointer;
+    -webkit-transition: opacity .3s;
+    transition: opacity .3s;
+    text-transform: uppercase;
+    letter-spacing: 3px
+}
+
+.height-60 {
+    height: 60px;
+}
+
+.sitecard-preview-c:hover .sitecard-preview {
+    -webkit-filter: blur(3px);
+    filter: blur(3px);
+    -webkit-transform: scale(1.07);
+    transform: scale(1.07)
+}
+
+.sitecard__overlay:hover {
+    opacity: 1
+}
+
+.sitecard_template {
+    @extend .sitecard__overlay;
+    line-height: 0px !important;
+    padding: 33px 0px 0px 0px;
 }
 
 @media (max-width: 768px) {
@@ -105,17 +188,6 @@
     }
 }
 
-// @media(max-width: 320px) {
-//     .container {
-//         width: 104%;
-//     }
-// }
-// @media (min-width:641px) {
-//     //for i-pad
-//     .container {
-//         width: 100%;
-//     }
-// }
 @media (min-width: 1200px) {
     .container {
         width: 100%;
