--- a/generator/services/seffrontendmanager/templates/ComponentTs.handlebars
+++ b/generator/services/seffrontendmanager/templates/ComponentTs.handlebars
@@ -5,6 +5,11 @@ import { {{importName}} } from '{{ importPath }}';
 {{#each GpHeadersStarAs}}
 import * as {{importName}} from '{{ importPath }}';
 {{/each}}
+{{#ifCond GpOptions.featureName '===' 'systementry'}}
+import grapesjs from 'grapesjs';
+import * as  Highcharts from 'highcharts';
+import faker from 'faker';
+{{/ifCond}}
 
 
 @Component({
@@ -63,10 +68,8 @@ export class {{ GpOptions.className }} implements OnInit {
 
                     this.{{ ../GpOptions.screenName }}Service.{{ flowName }}(this.Id).subscribe(logindetails => {
                         {{{ body }}}
-                    },
-                    error => {
-                        console.log('Error', error);
                     });
+                
 
             {{/each}}
         {{/ifCond}}
@@ -96,20 +99,6 @@ export class {{ GpOptions.className }} implements OnInit {
             }
         {{/each}}
     {{/ifCond}}
-    onSelectFile(event) {
-    if (event.target.files && event.target.files[0]) {
-      const reader = new FileReader();
-
-      reader.readAsDataURL(event.target.files[0]);
-      // tslint:disable-next-line:no-shadowed-variable
-      reader.onload = (event) => {
-        this.url = (event.target as FileReader).result;
-      };
-    }
-  }
-  public delete() {
-    this.url = null;
-  }
 {{#each GpCodeToAdd.route_info }}
     {{ flowName }}({{ parameterName }}) {
         {{{ body }}}
