--- a/application/clients/desktopV2/src/app/header/header.component.scss
+++ b/application/clients/desktopV2/src/app/header/header.component.scss
@@ -31,7 +31,7 @@
 }
 
 #header_logo {
-    width: 300px;
+    width: 200px;
     margin: 0 0 0 10%;
 }
 
@@ -162,6 +162,7 @@
     font-family: 'Ubuntu', sans-serif;
     font-size: 23px;
     padding: 15px 33px;
+    height: 50px;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 }
 
@@ -319,9 +320,9 @@ img {
 }
 
 #igsgh {
-    //  background-image: url('https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/61943676d037400aa3ac7eaa645107d7_overlay.png');
+    // background-image: url('https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/61943676d037400aa3ac7eaa645107d7_overlay.png');
     // background-repeat: no-repeat;
-    //   background-position: left top;
+    // background-position: left top;
     // background-attachment: scroll;
     // background-size: cover;
     height: 90vh;
