--- a/application/clients/desktopV2/src/app/app.component.html
+++ b/application/clients/desktopV2/src/app/app.component.html
@@ -1,3 +1,12 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+<!-- <div class="wrapper">
+    <app-header></app-header>
+    <div class="content">
+        <div style="height:1000px;">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+    <app-footer></app-footer>
+</div> -->
