--- a/application/clients/desktopV2/src/app/header/header.component.html
+++ b/application/clients/desktopV2/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav id="nav1" class="navbar navbar-expand-lg  navbar-dark ">
+<nav id="nav1" class="navbar navbar-expand-lg py-2 navbar-dark ">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img id="header_logo" src="./assets/images/header/logo.png" alt="logo">
@@ -10,10 +10,16 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             </ul>
             <div id="i1t03" class="gdp-row gpd-grid">
-                <select #langselect (change)="onChange(langselect.value)" class="btn btn-outline-dark me-4" id="lang_dropdown">
-                    <option *ngFor="let lang of display_langs"   [value]="lang">{{ lang  }}</option>
-                  </select>
-                <div class="cell gpd-clm" id="imllt"><button type="button" class="btn btn-primary me-4" (click)="showAbout()" id="iwghy">{{'HOME.ABOUT' | translate}}</button></div>
+                <button type="button" *ngIf="!hideElement" routerLink="/homepage" class="btn btn-primary me-4 py-2 mr-2" id="iwghy">{{'HEADER.HOME' | translate}}</button>
+                <div class="cell gpd-clm" id="imllt">
+                    <select #langselect (change)="onChange(langselect.value)" class="btn btn-outline-dark me-4 py-2" id="lang_dropdown">
+                        <option *ngFor="let lang of display_langs"   [value]="lang">{{ lang  }}</option>
+                      </select>
+
+                    <button type="button" class="btn btn-primary me-4 py-2" (click)="showAbout()" id="iwghy">{{'HOME.ABOUT' | translate}}</button>
+                    <button type="button" *ngIf="hideElement" routerLink="/login" class="btn btn-primary me-4 py-2" id="iwghy">{{'HEADER.SIGNIN' | translate}}</button>
+                    <button type="button" *ngIf="!hideElement" (click)="Logout()" class="btn btn-primary me-4 py-2" id="iwghy">{{'HEADER.LOGOUT' | translate}}</button>
+                </div>
             </div>
         </div>
     </div>
