--- a/application/clients/desktopV2/src/app/project/project.component.html
+++ b/application/clients/desktopV2/src/app/project/project.component.html
@@ -32,7 +32,7 @@
                         </div>
                         <div class="d-flex justify-content-around">
                             <div class="p-2 bd-highlight">
-                                <mat-icon class="base-icon" id="edit_icon" style="cursor: pointer;"></mat-icon>
+                                <mat-icon class="base-icon" (click)="editProject(proj)" id="edit_icon" style="cursor: pointer;"></mat-icon>
                             </div>
                             <div class="p-2 bd-highlight">
                                 <mat-icon class="base-icon" id="duplicate_icon" (click)="cloneProject(proj)" style="cursor: pointer;"></mat-icon>
