--- a/generator/services/aws-deployment-manager/templates/github_actions/task_defination.handlebars
+++ b/generator/services/aws-deployment-manager/templates/github_actions/task_defination.handlebars
@@ -278,6 +278,49 @@ module.exports = {
                 "credentialsParameter": ""
             }
         },
+        {
+            "name": "systemcredentialmanager-{{project_unique_id}}",
+            "image": `${process.env.AWS_ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/geppetto-generatedcode-{{project_name}}-{{project_unique_id}}-securitymanager:1`,
+            "memoryReservation": "300",
+            "resourceRequirements": null,
+            "essential": true,
+            "portMappings": [
+                {
+                    "containerPort": "8005",
+                    "protocol": "tcp",
+                    "hostPort": "8005"
+                }
+            ],
+            "environmentFiles": null,
+            "environment": [{"name":"MONGO_DB_URL","value":"mongodb://admin:password@127.0.0.1:27017/{{project_name}}_{{project_unique_id}}?authSource=admin"},{"name":"CAMUNDAPOD_URL","value":"http://127.0.0.1:8080"},{"name":"SECURITYURL","value":"http://127.0.0.1:8003"},{"name":"AUTHPROXYURL","value":"http://127.0.0.1:8001"},{"name":"ADMINURL","value":"http://127.0.0.1:8004"},{"name":"CAMUNDAURL","value":"http://127.0.0.1:8002"},{"name":"APIGATEWAY","value":"http://127.0.0.1:8000"}],
+            "mountPoints": [
+                {
+                  "readOnly": null,
+                  "containerPath": "/path/to/container",
+                  "sourceVolume": "{{project_name}}"
+                }
+              ],
+            "volumesFrom": null,
+            "hostname": null,
+            "user": null,
+            "workingDirectory": null,
+            "extraHosts": null,
+            "logConfiguration": {
+                "logDriver": "awslogs",
+                "options": {
+                    "awslogs-group": "/ecs/{{project_name}}",
+                    "awslogs-region": "us-east-1",
+                    "awslogs-stream-prefix": "ecs",
+                    "awslogs-create-group": "true"
+                }
+            },
+            "ulimits": null,
+            "dockerLabels": null,
+            "dependsOn": null,
+            "repositoryCredentials": {
+                "credentialsParameter": ""
+            }
+        },
           {{#each custom_features}}
         {
             "name": "{{this.name}}-{{../project_unique_id}}",
@@ -299,7 +342,7 @@ module.exports = {
                 {
                   "readOnly": null,
                   "containerPath": "/path/to/container",
-                  "sourceVolume": "{{project_name}}"
+                  "sourceVolume": "{{../project_name}}"
                 }
               ],
             "volumesFrom": null,
